@@ -11,6 +11,8 @@ class AuthorizedTwitterAccount(GObject.GObject):
         'update-credential': (GObject.SignalFlags.RUN_LAST, None, (object, )),
         }
 
+    CONFIG = None
+
     def __init__(self):
         super(AuthorizedTwitterAccount, self).__init__()
 
@@ -18,6 +20,12 @@ class AuthorizedTwitterAccount(GObject.GObject):
         self.api = TwitterFeed(consumer=CONSUMER, token=token)
         SETTINGS_TWITTER.connect("changed::access-secret", 
                                  self._on_update_credential)
+
+        if not AuthorizedTwitterAccount.CONFIG:
+            self.api.configuration().addCallback(self._on_get_configuration)
+
+    def _on_get_configuration(self, data):
+        AuthorizedTwitterAccount.CONFIG = data
 
     def _on_update_credential(self, account, unknown):
         token = self._get_token()
