@@ -1,3 +1,8 @@
+2012-03-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* twittytwister/twitter.py, twittytwister/txml.py: Added supoort
+	  for help/configuration API.
+
 2012-03-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* view.py, window.py: Added support for Drag and Drop image files.
